# wavelet

./: README.md
dfx/: .gitignore  Cargo.toml
dfx-macros/: Cargo.toml
dfx-macros/src/: lib.rs
dfx/examples/: export_json.rs  sum.json
dfx/examples/output/: copy_array.json  diffusion.json  dmv.json  dmv_const.json  increment.json  move.json  nn_fc.json  nn_relu.json  prefix_sum.json  raw.json  sum.json  war.json  waw.json  zero_out.json
dfx/src/: check.rs  env.rs  error.rs  ir.rs  lib.rs  main.rs  parse.rs
dfx/src/ghost/: affine.rs  fracperms.rs  ir.rs  json.rs  lower.rs  mod.rs
dfx/src/ghost/checker/: context.rs  expr_checker.rs  mod.rs  perm_env.rs  permission.rs  pretty_print.rs  program_checker.rs  stmt_checker.rs  tail_checker.rs  tests.rs
dfx/src/logic/: cap.rs  mod.rs  region.rs
dfx/src/logic/semantic/: mod.rs  region_set.rs  solver.rs
dfx/src/logic/syntactic/: mod.rs  solver.rs
dfx/tests/: cap_diff.rs  phi_region.rs  phi_solver.rs  solver_le.rs  typeck_tests.rs
dfx/tests/test_files/: copy_array.rs  diffusion.rs  dmv.rs  increment.rs  increment_bad.rs  move.rs  nn_fc.rs  nn_relu.rs  prefix_sum.rs  raw.rs  raw_no_fence.rs  sum.rs  war.rs  war_no_fence.rs  waw.rs  waw_no_fence.rs  zero_out.rs
eval/: Cargo.toml  count_annotations.py  dither.json  dmm.json  dmv.json  nn_fc.json  nn_norm.json  nn_pool.json  nn_relu.json  nn_vadd.json  sort.json
eval/output/: dither.json  dmm.json  dmv.json  nn_conv.json  nn_fc.json  nn_norm.json  nn_pool.json  nn_relu.json  nn_vadd.json  (+1 more)
lean/: Main.lean  Wavelet.lean  lake-manifest.json  lakefile.lean
(+182 files in other folders)
