[package]
name = "dfx-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
dfx = { path = "../dfx" }

[patch.crates-io]
smtlib = { path = "../dfx/vendor/smtlib" }
