[package]
name = "dfx"
version = "0.1.0"
edition = "2024"

[dependencies]
smallvec = "1.13"
thiserror = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
smtlib = "0.3"
smtlib-lowlevel = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

[lib]
name = "dfx"
path = "src/lib.rs"

[patch.crates-io]
smtlib = { path = "vendor/smtlib" }
